# mccabe-lint

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml
cmake/: Find_ASSERTIONS.cmake  Find_SPDLOG.cmake
lib/: CMakeLists.txt
lib/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
lib/Tokenizer/: CMakeLists.txt  Cursor.hpp  Token.hpp
lib/Tokenizer/tests/: CMakeLists.txt  Token_test.cpp
src/: main.cpp
tests/: CMakeLists.txt
